--- a/nav/presentes.html
+++ b/nav/presentes.html
@@ -752,7 +752,7 @@
                         <button class="gift-button" data-price="185.38" data-item-id="item14">Presentear com PIX</button>
                     </div>
                 </div>
-                <div class="gift-item">
+                <div class="gift-item gift-given">
                     <div class="gift-image">
                        <img src="https://storage.googleapis.com/icasei-products-prod/couple/1427575/images/4350268/1751407798/site-de-casamento-icasei-lp-0000000112281883.webp">
                     </div>
@@ -772,7 +772,7 @@
                         <button class="gift-button" data-price="80" data-item-id="item16">Presentear com PIX</button>
                     </div>
                 </div>
-                <div class="gift-item">
+                <div class="gift-item gift-given">
                     <div class="gift-image">
                        <img src="https://cdn.discordapp.com/attachments/1223480705300824094/1403471919076085840/IMG-20250807-WA0032.jpg?ex=6897ac94&is=68965b14&hm=ee49bb1fccbb9c1130db38477778c79110cd820a33e6cd6f481e79b71b644fec&">
                     </div>
@@ -1019,7 +1019,7 @@
                     <div class="gift-image">
                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRu3fS99OMrW0DhhCiPJCGjA-qv1Yi8XBe0yw&s">
                     </div>
-                    <div class="gift-info">
+                    <div class="gift-info gift-given">
                         <div class="gift-tag">Mais Popular</div>
                         <h3 class="gift-name">Vale-presente</h3>
                         <div class="gift-price">R$ 160</div>
