--- a/nav/presentes.html
+++ b/nav/presentes.html
@@ -1015,11 +1015,11 @@
                         <button class="gift-button" data-price="140" data-item-id="item39">Presentear com PIX</button>
                     </div>
                 </div>
-               <div class="gift-item">
+               <div class="gift-item gift-given">
                     <div class="gift-image">
                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRu3fS99OMrW0DhhCiPJCGjA-qv1Yi8XBe0yw&s">
                     </div>
-                    <div class="gift-info gift-given">
+                    <div class="gift-info">
                         <div class="gift-tag">Mais Popular</div>
                         <h3 class="gift-name">Vale-presente</h3>
                         <div class="gift-price">R$ 160</div>
