--- a/nav/presentes.html
+++ b/nav/presentes.html
@@ -774,7 +774,7 @@
                 </div>
                 <div class="gift-item gift-given">
                     <div class="gift-image">
-                       <img src="https://cdn.discordapp.com/attachments/1223480705300824094/1403471919076085840/IMG-20250807-WA0032.jpg?ex=6897ac94&is=68965b14&hm=ee49bb1fccbb9c1130db38477778c79110cd820a33e6cd6f481e79b71b644fec&">
+                       <img src="https://www.havan.com.br/media/catalog/product/cache/73a52df140c4d19dbec2b6c485ea6a50/j/o/jogo-de-panela-tramontina-california-7-pecas_747382.webp">
                     </div>
                     <div class="gift-info">
                         <h3 class="gift-name">Jogo de panela</h3>
