--- a/nav/presentes.html
+++ b/nav/presentes.html
@@ -722,7 +722,7 @@
                         <button class="gift-button" data-price="39.71" data-item-id="item11">Presentear com PIX</button>
                     </div>
                 </div>
-                <div class="gift-item gifit-given">
+                <div class="gift-item gift-given">
                     <div class="gift-image">
                        <img src="https://lh3.googleusercontent.com/stzqGKWGnbk9qdd3YxdRvTDIXRzwpwKcfRnGguknP2XiHXJ4Y0TKfm3EbL_FP4kLQAwhOxFTn5xlQfbhGFnoNVdISLu68ACFZpRr2LqZZV6J=s0">
                     </div>
