--- a/nav/pos-casamento.html
+++ b/nav/pos-casamento.html
@@ -729,7 +729,7 @@
             <div class="items-container">
                 <div class="item-card">
                     <div class="item-image">
-                        <img src="https://placehold.co/300x200?text=Touca" alt="Item esquecido 1">
+                        <img src="../img/touca.jpg" alt="Item esquecido 1">
                     </div>
                     <div class="item-info">
                         <div class="item-name">Touca</div>
@@ -740,18 +740,18 @@
                 
                 <div class="item-card">
                     <div class="item-image">
-                        <img src="https://placehold.co/300x200?text=Gloss+Rosa" alt="Item esquecido 2">
+                        <img src="../img/gloss.jpg" alt="Item esquecido 2">
                     </div>
                     <div class="item-info">
                         <div class="item-name">Gloss Rosa</div>
-                        <div class="item-description">Gloss Rosa da marca Lip Gloss, com 7ML, deixada na mesa próxima há mesa de carne.</div>
+                        <div class="item-description">Gloss Rosa da marca avon linha Lip Gloss, com 7ML, deixada na mesa próxima há mesa de carne.</div>
                         <div class="item-contact">Entrar em contato: (12) 99227-5443</div>
                     </div>
                 </div>
                 
                 <div class="item-card">
                     <div class="item-image">
-                        <img src="https://placehold.co/300x200?text=Carregador+Preto" alt="Item esquecido 3">
+                        <img src="../img/carregador.jpg" alt="Item esquecido 3">
                     </div>
                     <div class="item-info">
                         <div class="item-name">Carregador preto</div>
