--- a/nav/pos-casamento.html
+++ b/nav/pos-casamento.html
@@ -50,7 +50,7 @@
         
         /* Header */
         header {
-            background: linear-gradient(rgba(60, 47, 47, 0.7), rgba(60, 47, 47, 0.7)), url('../img/casaamento') no-repeat 45% center/cover;
+            background: linear-gradient(rgba(60, 47, 47, 0.7), rgba(60, 47, 47, 0.7)), url('../img/casaamento.png') no-repeat 45% center/cover;
             height: 100vh;
             display: flex;
             flex-direction: column;
