--- a/nav/pos-casamento.html
+++ b/nav/pos-casamento.html
@@ -843,11 +843,10 @@
                     <div class="gift-slide">
                         <div class="gift-card">
                             <div class="gift-image">
-                                <img src="https://placehold.co/300x200?text=Jogo+de+Panelas" alt="Jogo de Panelas">
+                                <img src="../img/presentes/liquidificador.jpg" alt="Liquidificador">
                             </div>
                             <div class="gift-info">
-                                <div class="gift-name">Jogo de Panelas</div>
-                                <div class="gift-giver">De: Maria e João</div>
+                                <div class="gift-name">Liquidificador</div>
                                 <div class="gift-status">Entregue</div>
                             </div>
                         </div>
