--- a/nav/pos-casamento.html
+++ b/nav/pos-casamento.html
@@ -805,7 +805,7 @@
                     </div>
                 </div>
                 
-                <div class="item-card">
+                <div class="item-card item-recovered">
                     <div class="item-image">
                         <img src="../img/carregador.jpg" alt="Carregador">
                     </div>
@@ -855,11 +855,10 @@
                     <div class="gift-slide">
                         <div class="gift-card">
                             <div class="gift-image">
-                                <img src="https://placehold.co/300x200?text=Liquidificador" alt="Liquidificador">
+                                <img src="../img/presentes/panela_pressao.jpg" alt="Liquidificador">
                             </div>
                             <div class="gift-info">
-                                <div class="gift-name">Liquidificador</div>
-                                <div class="gift-giver">De: Ana e Carlos</div>
+                                <div class="gift-name">Panela de pressão</div>
                                 <div class="gift-status">Entregue</div>
                             </div>
                         </div>
