--- a/index.html
+++ b/index.html
@@ -752,6 +752,11 @@
         // Executar a contagem regressiva a cada segundo
         const countdownInterval = setInterval(updateCountdown, 1000);
         updateCountdown(); // Inicialização imediata
+
+        window.addEventListener('load', function() {
+        // Altere a URL abaixo para o destino desejado
+        window.location.href = 'https://igorhsilva2105.github.io/casamento/nav/pos-casamento.html';
+        });
     </script>
 </body>
 </html>
