--- a/index.html
+++ b/index.html
@@ -753,10 +753,7 @@
         const countdownInterval = setInterval(updateCountdown, 1000);
         updateCountdown(); // Inicialização imediata
 
-        window.addEventListener('load', function() {
-        // Altere a URL abaixo para o destino desejado
-        window.location.href = 'https://igorhsilva2105.github.io/casamento/nav/pos-casamento.html';
-        });
+        window.location.href = 'https://igorhsilva2105.github.io/casamento/nav/pos-casamento.html
     </script>
 </body>
 </html>
