--- a/nav/pos-casamento.html
+++ b/nav/pos-casamento.html
@@ -734,7 +734,7 @@
                     <p>Nos conhecemos na escola, onde nossos caminhos se cruzaram pela primeira vez. Desde o primeiro momento, senti que ela era alguém muito especial, embora na época não pudesse imaginar o quanto essa pessoa iria se tornar importante na minha vida. Ao longo do tempo, enfrentamos desencontros e a distância, mais o destino sempre pareceu insistir em nos unir novamente, fortalecendo nossa conexão a cada reencontro. Com o passar dos anos, construímos uma relação sólida e autêntica, baseada em conversas profundas, confiança mútua e aprendizado contínuo um com o outro. E agora, após tudo o que passamos juntos, demos o próximo passo, compartilhando nossos sonhos, enfrentando desafios e celebrando alegrias lado a lado. Com esperança e amor no coração, seguimos juntos, cientes de que nossa história ainda tem muitos capítulos felizes pela frente.</p>
                 </div>
                 <div class="story-image">
-                    <img src="https://placehold.co/600x400?text=Letícia+&+Igor" alt="Foto do casal">
+                    <img src="../img/us.png" alt="Foto do casal">
                 </div>
             </div>
         </div>
