--- a/nav/pos-casamento.html
+++ b/nav/pos-casamento.html
@@ -825,7 +825,7 @@
             <h2 class="section-title">Como Foi Especial</h2>
             
             <div class="event-banner">
-                <img src="https://placehold.co/1200x300?text=Banner+do+Evento" alt="Banner do evento">
+                <img src="../img/especial.png" alt="Banner do evento">
             </div>
             
         </div>
