--- a/nav/pos-casamento.html
+++ b/nav/pos-casamento.html
@@ -1003,7 +1003,7 @@
                 const imgElement = item.querySelector('.gallery-photo');
                 // Formatar o número com dois dígitos (ex: 1 → 01, 10 → 10)
                 const formattedNumber = randomNumber < 10 ? `0${randomNumber}` : `${randomNumber}`;
-                imgElement.src = `../img/foto${formattedNumber}.png`;
+                imgElement.src = `../img/fotos/foto${formattedNumber}.png`;
                 imgElement.alt = `Foto do casamento ${randomNumber}`;
             });
         }
