--- a/nav/pos-casamento.html
+++ b/nav/pos-casamento.html
@@ -917,12 +917,11 @@
                     <div class="gift-slide">
                         <div class="gift-card">
                             <div class="gift-image">
-                                <img src="https://placehold.co/300x200?text=Cafeteira" alt="Cafeteira">
+                                <img src="../img/presentes/mixer.jpg" alt="mixer">
                             </div>
                             <div class="gift-info">
-                                <div class="gift-name">Cafeteira</div>
-                                <div class="gift-giver">De: Pedro e Marta</div>
-                                <div class="gift-status">Aguardando entrega</div>
+                                <div class="gift-name">Mixer</div>
+                                <div class="gift-status">Entregue</div>
                             </div>
                         </div>
                     </div>
