--- a/nav/pos-casamento.html
+++ b/nav/pos-casamento.html
@@ -929,11 +929,10 @@
                     <div class="gift-slide">
                         <div class="gift-card">
                             <div class="gift-image">
-                                <img src="https://placehold.co/300x200?text=Jogo+de+Toalhas" alt="Jogo de Toalhas">
+                                <img src="../img/presentes/panela_pressao.jpg" alt="Panela de pressão">
                             </div>
                             <div class="gift-info">
-                                <div class="gift-name">Jogo de Toalhas</div>
-                                <div class="gift-giver">De: Paulo e Lucia</div>
+                                <div class="gift-name">Panela de Pressão</div>
                                 <div class="gift-status">Entregue</div>
                             </div>
                         </div>
