--- a/nav/pos-casamento.html
+++ b/nav/pos-casamento.html
@@ -941,11 +941,10 @@
                     <div class="gift-slide">
                         <div class="gift-card">
                             <div class="gift-image">
-                                <img src="https://placehold.co/300x200?text=Jogo+de+Cama" alt="Jogo de Cama">
+                                <img src="../img/presentes/toalhas_fofinhas.jpg" alt="Toalhas fofinhas">
                             </div>
                             <div class="gift-info">
-                                <div class="gift-name">Jogo de Cama Queen</div>
-                                <div class="gift-giver">De: Carlos e Fernanda</div>
+                                <div class="gift-name">Toalhas Fofinhas</div>
                                 <div class="gift-status">Entregue</div>
                             </div>
                         </div>
@@ -954,12 +953,11 @@
                     <div class="gift-slide">
                         <div class="gift-card">
                             <div class="gift-image">
-                                <img src="https://placehold.co/300x200?text=Air+Fryer" alt="Air Fryer">
+                                <img src="../img/presentes/geladeira.jpg" alt="geladeira">
                             </div>
                             <div class="gift-info">
-                                <div class="gift-name">Fritadeira Elétrica</div>
-                                <div class="gift-giver">De: Roberto e Sandra</div>
-                                <div class="gift-status">Aguardando entrega</div>
+                                <div class="gift-name">Geladeira</div>
+                                <div class="gift-status">Entregue</div>
                             </div>
                         </div>
                     </div>
@@ -967,11 +965,10 @@
                     <div class="gift-slide">
                         <div class="gift-card">
                             <div class="gift-image">
-                                <img src="https://placehold.co/300x200?text=Jantar+Romântico" alt="Jantar Romântico">
+                                <img src="https://placehold.co/300x200?text=Vale+Presente" alt="Vale presente">
                             </div>
                             <div class="gift-info">
-                                <div class="gift-name">Vale-Jantar</div>
-                                <div class="gift-giver">De: Amigos do Trabalho</div>
+                                <div class="gift-name">Vale-presente</div>
                                 <div class="gift-status">Disponível</div>
                             </div>
                         </div>
