--- a/nav/pos-casamento.html
+++ b/nav/pos-casamento.html
@@ -897,7 +897,7 @@
                             </div>
                             <div class="gift-info">
                                 <div class="gift-name">Liquidificador</div>
-                                <div class="gift-status">Entregue</div>
+                                <div class="gift-status">Presenteado via pix</div>
                             </div>
                         </div>
                     </div>
@@ -921,7 +921,7 @@
                             </div>
                             <div class="gift-info">
                                 <div class="gift-name">Mixer</div>
-                                <div class="gift-status">Entregue</div>
+                                <div class="gift-status">Presenteado pessoalmente</div>
                             </div>
                         </div>
                     </div>
@@ -933,7 +933,7 @@
                             </div>
                             <div class="gift-info">
                                 <div class="gift-name">Panela de Pressão</div>
-                                <div class="gift-status">Entregue</div>
+                                <div class="gift-status">Presenteado pessoalmente</div>
                             </div>
                         </div>
                     </div>
@@ -945,7 +945,7 @@
                             </div>
                             <div class="gift-info">
                                 <div class="gift-name">Toalhas Fofinhas</div>
-                                <div class="gift-status">Entregue</div>
+                                <div class="gift-status">Presenteado Pessoalmente</div>
                             </div>
                         </div>
                     </div>
@@ -957,7 +957,7 @@
                             </div>
                             <div class="gift-info">
                                 <div class="gift-name">Geladeira</div>
-                                <div class="gift-status">Entregue</div>
+                                <div class="gift-status">Presenteado pessoalmente</div>
                             </div>
                         </div>
                     </div>
@@ -969,7 +969,7 @@
                             </div>
                             <div class="gift-info">
                                 <div class="gift-name">Vale-presente</div>
-                                <div class="gift-status">Disponível</div>
+                                <div class="gift-status">Presenteado via pix</div>
                             </div>
                         </div>
                     </div>
