--- a/nav/pos-casamento.html
+++ b/nav/pos-casamento.html
@@ -929,10 +929,10 @@
                     <div class="gift-slide">
                         <div class="gift-card">
                             <div class="gift-image">
-                                <img src="../img/presentes/panela_pressao.jpg" alt="Panela de pressão">
+                                <img src="../img/presentes/fogao.jpg" alt="fugão">
                             </div>
                             <div class="gift-info">
-                                <div class="gift-name">Panela de Pressão</div>
+                                <div class="gift-name">Fogão</div>
                                 <div class="gift-status">Presenteado pessoalmente</div>
                             </div>
                         </div>
