--- a/nav/pos-casamento.html
+++ b/nav/pos-casamento.html
@@ -761,7 +761,7 @@
                 </div>
             </div>
             <div class="view-more">
-                <a href="#" class="view-more-button">Ver Mais Fotos</a>
+                <a href="fotos.html" class="view-more-button">Ver Mais Fotos</a>
             </div>
         </div>
     </section>
