--- a/nav/fotos.html
+++ b/nav/fotos.html
@@ -382,30 +382,6 @@
     </header>
 
     <main class="container">
-        <div class="api-info">
-            <h3>📸 Acesso Direto às Fotos</h3>
-            <p>Use estes links para acessar fotos específicas diretamente:</p>
-            <div class="api-example">
-                https://seusite.com/galeria-fotos.html#foto-01
-                <button class="copy-button" onclick="copyToClipboard('https://seusite.com/galeria-fotos.html#foto-01')">
-                    <i class="fas fa-copy"></i>
-                </button>
-            </div>
-            <div class="api-example">
-                https://seusite.com/galeria-fotos.html#foto-07
-                <button class="copy-button" onclick="copyToClipboard('https://seusite.com/galeria-fotos.html#foto-07')">
-                    <i class="fas fa-copy"></i>
-                </button>
-            </div>
-            <div class="api-example">
-                https://seusite.com/galeria-fotos.html#foto-15
-                <button class="copy-button" onclick="copyToClipboard('https://seusite.com/galeria-fotos.html#foto-15')">
-                    <i class="fas fa-copy"></i>
-                </button>
-            </div>
-            <p><small>Substitua "seusite.com" pelo seu domínio real e o número pelo ID da foto desejada (01-16).</small></p>
-        </div>
-
         <div class="gallery-grid" id="gallery-grid">
             <div class="loading">
                 <div class="spinner"></div>
@@ -416,7 +392,7 @@
     <!-- Modal para detalhes da foto -->
     <div class="modal" id="photoModal">
         <div class="modal-content">
-            <span class="close-button" id="closeModal">&times;</span>
+            <span clas="close-button" id="closeModal">&times;</span>
             <div class="modal-body">
                 <div class="modal-image">
                     <img id="modalImage" src="" alt="">
