--- a/nav/fotos.html
+++ b/nav/fotos.html
@@ -454,27 +454,27 @@
         const fotosData = [
             {
                 id: "01",
-                nome: "O primeiro olhar",
+                nome: "Só checando uma parada",
                 src: "../img/Fotos/foto01.png",
-                fotografo: "Carlos Silva",
-                momento: "Cerimônia",
-                tags: ["cerimônia", "altar", "noivo", "noiva"]
+                fotografo: "Matheus Hilário",
+                momento: "Antes da missa",
+                tags: ["cerimônia", "descontraído", "padrinhos", "noivo"]
             },
             {
                 id: "02",
-                nome: "Troca de alianças",
+                nome: "Parceria máxima",
                 src: "../img/Fotos/foto02.png",
-                fotografo: "Carlos Silva",
-                momento: "Cerimônia",
-                tags: ["alianças", "casamento", "união"]
+                fotografo: "Matheus Hilário",
+                momento: "Festa",
+                tags: ["amigos", "padrinho", "união"]
             },
             {
                 id: "03",
-                nome: "Beijo nupcial",
+                nome: "Parceria máxima #2",
                 src: "../img/Fotos/foto03.png",
-                fotografo: "Carlos Silva",
-                momento: "Cerimônia",
-                tags: ["beijo", "casal", "amor"]
+                fotografo: "Matheus Hilário",
+                momento: "Festa",
+                tags: ["amigos", "padrinho", "união"]
             },
             {
                 id: "04",
@@ -530,7 +530,7 @@
             },
             {
                 id: "11",
-                nome: "Lua de mel",
+                nome: "Entrada da noiva",
                 src: "../img/Fotos/foto11.png",
                 fotografo: "Carlos Silva",
                 momento: "Saída",
