--- a/nav/fotos.html
+++ b/nav/fotos.html
@@ -478,48 +478,49 @@
             },
             {
                 id: "04",
-                nome: "Saída da igreja",
+                nome: "Olhares",
                 src: "../img/Fotos/foto04.png",
-                fotografo: "Ana Santos",
-                momento: "Pós-cerimônia",
-                tags: ["saída", "igreja", "arroz"]
+                fotografo: "Desconhecido",
+                momento: "Cerimônia",
+                tags: ["cerimônia", "igreja", "olhares"]
             },
             {
                 id: "05",
-                nome: "Festa de recepção",
+                nome: "Capelinha",
                 src: "../img/Fotos/foto05.png",
-                fotografo: "Ana Santos",
-                momento: "Recepção",
-                tags: ["festa", "comemoração", "dança"]
+                fotografo: "Igor Henrique da Silva",
+                momento: "Pré-casorio",
+                tags: ["fofo", "capela", "chácara"]
             },
             {
                 id: "06",
-                nome: "Primeira dança",
+                nome: "Nossas belas madrinhas",
                 src: "../img/Fotos/foto06.png",
-                momento: "Recepção",
-                tags: ["dança", "casal", "romance"]
+                fotografo: "Flávia",
+                momento: "Festa",
+                tags: ["madrinhas", "festa"]
             },
             {
                 id: "07",
-                nome: "Bolo dos noivos",
+                nome: Nossas belas madrinhas #2",
                 src: "../img/Fotos/foto07.png",
-                fotografo: "Ana Santos",
-                momento: "Recepção",
-                tags: ["bolo", "doce", "tradição"]
+                fotografo: "Flávia",
+                momento: "Festa",
+                tags: ["madrinhas", "festa"]
             },
             {
                 id: "08",
-                nome: "Brinde dos noivos",
+                nome: "Vovós da noiva",
                 src: "../img/Fotos/foto08.png",
-                momento: "Recepção",
-                tags: ["brinde", "família", "amigos"]
+                momento: "Festa",
+                tags: ["festa", "familia", "amor de vó", "amor de vô"]
             },
             {
                 id: "09",
-                nome: "Família unida",
+                nome: "Primos posturados",
                 src: "../img/Fotos/foto09.png",
-                fotografo: "Carlos Silva",
-                tags: ["família", "parentes", "união"]
+                fotografo: "Desconhecido",
+                tags: ["família", "fofo", "igreja"]
             },
             {
                 id: "10",
