--- a/nav/fotos.html
+++ b/nav/fotos.html
@@ -524,18 +524,19 @@
             },
             {
                 id: "10",
-                nome: "Amigos para sempre",
+                nome: "Casados para sempre",
                 src: "../img/Fotos/foto10.png",
-                momento: "Recepção",
-                tags: ["amigos", "diversão", "festa"]
+                fotografo: "Desconhecido",
+                momento: "Cerimonia",
+                tags: ["amor", "igreja", "alegria"]
             },
             {
                 id: "11",
                 nome: "Entrada da noiva",
                 src: "../img/Fotos/foto11.png",
-                fotografo: "Carlos Silva",
-                momento: "Saída",
-                tags: ["saída", "lua de mel", "viagem"]
+                fotografo: "Desconhecido",
+                momento: "Cerimonia",
+                tags: ["entrada", "noiva", "emoção"]
             },
             {
                 id: "12",
