--- a/nav/fotos.html
+++ b/nav/fotos.html
@@ -540,38 +540,38 @@
             },
             {
                 id: "12",
-                nome: "Detalhe do vestido",
+                nome: "A alegria da família",
                 src: "../img/Fotos/foto12.png",
-                tags: ["vestido", "detalhe", "noiva"]
+                momento: "Pré-Cerimonia",
+                tags: ["alegria", "família", "igreja"]
             },
             {
                 id: "13",
-                nome: "Momentos divertidos",
+                nome: "Saida dos noivos",
                 src: "../img/Fotos/foto13.png",
-                momento: "Recepção",
-                tags: ["diversão", "amigos", "dança"]
+                momento: "Cerimonia",
+                tags: ["amor", "saída", "noivos"]
             },
             {
                 id: "14",
-                nome: "Decoração do altar",
+                nome: "Dinho e",
                 src: "../img/Fotos/foto14.png",
-                fotografo: "Ana Santos",
-                momento: "Cerimônia",
-                tags: ["decoração", "flores", "altar"]
+                momento: "Pré-Cerimônia",
+                tags: ["igreja", "alegria", "família1"]
             },
             {
                 id: "15",
-                nome: "Olhares de love",
+                nome: "Olhares ao altar",
                 src: "../img/Fotos/foto15.png",
                 momento: "Cerimônia",
-                tags: ["olhares", "amor", "casal"]
+                tags: ["olhares", "altar", "cerimonia"]
             },
             {
                 id: "16",
-                nome: "Celebração com os amigos",
+                nome: "🤙"
                 src: "../img/Fotos/foto16.png",
-                momento: "Recepção",
-                tags: ["amigos", "festa", "comemoração"]
+                momento: "Cerimonia",
+                tags: ["🤙", "família", "descontraido"]
             }
         ];
 
