--- a/nav/fotos.html
+++ b/nav/fotos.html
@@ -502,7 +502,7 @@
             },
             {
                 id: "07",
-                nome: Nossas belas madrinhas #2",
+                nome: "Nossas belas madrinhas #2",
                 src: "../img/Fotos/foto07.png",
                 fotografo: "Flávia",
                 momento: "Festa",
