--- a/nav/fotos.html
+++ b/nav/fotos.html
@@ -568,7 +568,7 @@
             },
             {
                 id: "16",
-                nome: "🤙"
+                nome: "🤙",
                 src: "../img/Fotos/foto16.png",
                 momento: "Cerimonia",
                 tags: ["🤙", "família", "descontraido"]
